<resources>
    <string name="blank"></string>
    <string name="picture_shot_once">Shot</string>
    <string name="picture_shot_several">Scenarios</string>
    <string name="picture_shot_several_patient">Photo session</string>
    <string name="picture_shot_emergency">Emergency</string>
    <string name="barcode_reader">Barcode reader</string>
    <string name="folder">My case</string>
    <string name="folder_patient">My pictures</string>
    <string name="folder2">Same cases</string>
    <string name="puzzle">Other</string>
    <string name="settings">Settings</string>
    <string name="practice">Practice</string>
    <string name="no_patient_found">No patient found</string>
	<string name="initialisation">Initialization</string>
	<string name="exploitation">Utilization</string>
    <string name="splashscreen">Startup screen</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="shutter_release_button">Shutter release</string>
    <string name="shutter_release_button1">Virtual</string>
    <string name="shutter_release_button2">Sound</string>
    <string name="bgcolor">Background color</string>
    <string name="displaymodemycase">Display my case</string>
    <string name="displaymodemycase1">First/second</string>
    <string name="displaymodemycase2">First/last</string>
    <string name="doctoremail">Doctor email</string>
    <string name="black">Black</string>
    <string name="grey">Grey</string>
    <string name="white">White</string>
    <string name="remoteserver">Remote KitView</string>
    <string name="multicomputers">Multiple computers</string>
    <string name="kitview_computer">Local KitView</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="streaming">Streaming</string>
    <string name="android">Android</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send_logs_by_mail">Send logs by mail ?</string>
    <string name="barcode_modes_title">Modes</string>
    <string name="barcode_mode1_explanation">Mode 1 - Send to keyboard</string>
    <string name="barcode_mode2_explanation">Mode 2 - Launch a script</string>
    <string name="barcode_choice">Choice</string>
    <string name="barcode_mode1">Mode 1</string>
    <string name="barcode_mode2">Mode 2</string>
    <string name="share_photo_title">Share</string>
    <string name="camera_unavailable_title">Camera unavailable</string>
    <string name="camera_unavailable_content">Restart your Android device</string>
    <string name="oom_title">Out of memory</string>
    <string name="oom_content">Memory full. Please restart the application.</string>
    <string name="io_error_title">Writing error</string>
    <string name="io_error_content">Impossible to save your picture. Please restart the application or your Android device if the problem persist.</string>
    <string name="disk_full_title">Disk full</string>
    <string name="disk_full_content">Not enough space to save your picture. Please free up disk space.</string>
    <string name="wifi_title">Wifi disabled</string>
    <string name="wifi_content">Enable Wifi in your Android OS settings</string>
    <string name="quit_application">Quit application ?</string>
    <string name="confirm_quit_application">Are you sure to quit the application ?</string>
    <string name="select_mode_cabinet_patient">Application mode</string>
    <string name="cabinet">Surgery</string>
    <string name="patient">Patient</string>
    <string name="select_collection">Select a collection</string>
    <string name="confirm_before_sending">Confirmation before sending</string>
    <string name="pictures_missing">Some pictures are missing.</string>
    <string name="confirm_before_sending_sure_to_send_pictures_to_kitview">Are you sure to send your pictures to KitView ?</string>
    <string name="confirm_before_sending_sure_to_send_pictures_to_medical">Are you sure to send your pictures to your doctor ?</string>
    <string name="confirm_before_deletion">Confirmation before deletion</string>
    <string name="confirm_before_deletion_sure_to_delete">Are you sure to delete the selected line ?</string>
    <string name="confirm_before_reinit">Confirmation before reset</string>
    <string name="confirm_before_reinit_sure_to_reinit">Are you sure to reset the current configuration ?</string>
    <string name="off">Off</string>
    <string name="sound">Sound</string>
    <string name="shutter1">Shutter 1</string>
    <string name="flash">Flash</string>
    <string name="focus">Focus</string>
    <string name="resolution">Resolution</string>
    <string name="scenarios">Scenarios</string>
    <string name="sensivity">Sensivity</string>
    <string name="sensivity_low">Low</string>
    <string name="sensivity_normal">Normal</string>
    <string name="sensivity_high">High</string>
    <string name="picture_time_display">Display duration</string>
    <string name="pinch_to_zoom">Pinch to zoom</string>
    <string name="clic_twice_to_show_patient_pictures">Clic twice to show patient pictures \n Swipe to navigate</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="last">last</string>
    <string name="copyright_kitview_labs_2015"><![CDATA[<font size="1" color="white"></font> <font size="5" color="white"><b>KitView Labs 2016</b></font>]]></string>
    <string name="sur">on</string>
    <string name="no_pictures">No pictures in this collection</string>
    <string name="take_photo"><![CDATA[Take <b> VALUE </b>]]></string>
    <string name="take_photo_again"><![CDATA[Take <b> VALUE </b> again]]></string>
    <string name="photo_type_saved"><![CDATA[<b> VALUE </b> saved]]></string>
    <string name="photo_from_patient_saved1">Picture saved</string>
    <string name="photo_from_patient_saved2">VALUE1 saved</string>
    <string name="photo_from_patient_transmitted_to_kitview">Picture successfully sended to KitView</string>
    <string name="photos_from_patient_transmitted_to_kitview">Pictures successfully sended to KitView</string>
    <string name="connection_to_kitview_ko">Can\'t establish connection to KitView timeout exceeded</string>
    <string name="wifi_ko">Can\'t establish connection to KitView Wifi unavailable</string>
    <string name="sending_pictures_to_kitview_ko">Impossible to send your pictures to KitView</string>
    <string name="ice_cream_sandwitch_required">Android 4.0 required to execute KitView application</string>
    <string name="folder_non_existent">Folder non existent</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="success_download">Files have been downloaded successfully</string>
    <string name="download_failed">A problem occurred during the download</string>
    <string name="no_data_received">No data received</string>
    <string name="name">Bubble</string>
    <string name="reset">Reset</string>
    <string name="not_supported">Orientation not supported</string>
    <string name="save">Save</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrate_info">press MENU to calibrate...</string>
    <string name="calibrate_title">Calibrate your phone</string>
    <string name="calibrate_message">Put any side (including the back) of your Android device on a flat horizontal surface and press the Calibrate button.\n\nOr reset 
the calibration for all the phone sides.</string>
    <string name="calibrate_again_title">You must re-calibrate</string>
    <string name="calibrate_again_message">The sensor change requires re-calibration of the phone.</string>
    <string name="calibrate_saved">Custom calibration saved !</string>
    <string name="calibrate_failed">Calibration failed !</string>
    <string name="calibrate_restored">Original calibration restored !</string>
    <string name="preferences">Settings</string>
    <string name="preference_show_angle">Show numeric angle</string>
    <string name="preference_show_angle_summary">Display angle value(s) on screen</string>
    <string name="preference_display_type">Display type</string>
    <string name="preference_sound">Sound effects</string>
    <string name="preference_sound_summary">Play sound when level</string>
    <string name="preference_lock">Locking</string>
    <string name="preference_lock_summary">Allow level orientation locking</string>
    <string name="preference_viscosity">Viscosity</string>
    <string name="preference_economy">Eco mode</string>
    <string name="preference_economy_summary">Less smooth animations\nbut preserves the battery life</string>
    <string name="angle">Angle</string>
    <string name="lock_info">tap to lock level orientation</string>
    <string name="inclination">Inclination</string>
    <string name="roof_pitch">Roof pitch</string>
    <string name="roof_pitch_summary">Inches of rise per foot of run\n3 &#126; 14°</string>
    <string name="angle_summary">Angle in degrees</string>
    <string name="inclination_summary">Inclination in percents\n100&#37; &#126; 45°</string>
    <string name="viscosity_low">Low</string>
    <string name="viscosity_medium">Medium</string>
    <string name="viscosity_high">High</string>
    <string name="viscosity_low_summary">Low viscosity\nBubble moves faster</string>
    <string name="viscosity_medium_summary">Medium viscosity\nBubble moves normaly</string>
    <string name="viscosity_high_summary">High viscosity\nBubble moves slowly</string>
    <string name="config_switch_vertically">Invert vertically</string>
    <string name="config_switch_horizontally">Invert horizontally</string>
    <string name="config_rotate_axis">Rotate axis</string>
    <string name="tag_aperture">Focal ratio</string>
    <string name="tag_datetime">Date and time</string>
    <string name="tag_exposure_time">Exposure time</string>
    <string name="tag_flash">Flash</string>
    <string name="tag_focal_length">Focal length</string>
    <string name="tag_gps_altitude">GPS altitude</string>
    <string name="tag_gps_altitude_ref">GPS altitude ref</string>
    <string name="tag_gps_datestamp">GPS date stamp</string>
    <string name="tag_gps_latitude">GPS latitude</string>
    <string name="tag_gps_latitude_ref">GPS latitude ref</string>
    <string name="tag_gps_longitude">GPS longitude</string>
    <string name="tag_gps_longitude_ref">GPS longitude ref</string>
    <string name="tag_gps_processing_method">GPS processing method</string>
    <string name="tag_gps_timestamp">GPS time stamp</string>
    <string name="tag_image_length">Height</string>
    <string name="tag_image_width">Width</string>
    <string name="tag_iso">ISO sensitivity</string>
    <string name="tag_make">Make</string>
    <string name="tag_model">Model</string>
    <string name="tag_orientation">Orientation</string>
    <string name="tag_white_balance">White balance</string>
    <string name="app_loading">Loading</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_discover_cancel">Cancel</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_options">Options</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="task_db">Downloading and installing %s database ...</string>
    <string name="task_services">Creating Services database ...\nThis may take a while ...</string>
    <string name="package_missing">%s must be installed from the market !</string>
</resources>