<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:padding="10dp" >

    <util.components.rotate_layout.RotateLayout
        android:id="@+id/rotateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="calibri"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/popup_title"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/sound_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sound_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/sound"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sound_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shutter_release_button_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/shutter_release_button_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/shutter_release_button"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/shutter_release_button_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/flash_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/flash_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/flash"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/flash_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/focus_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/focus_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/focus"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/focus_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>

             <LinearLayout
                android:id="@+id/resolution_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/resolution_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/resolution"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/resolution_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            
            <!--
            <LinearLayout
                android:id="@+id/sensivity_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sensivity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/sensivity"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sensivity_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            -->

            <LinearLayout
                android:id="@+id/picture_time_display_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_settings_subtext_leftspace"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/picture_time_display_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="calibri"
                    android:text="@string/picture_time_display"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/app_settings_text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/picture_time_display_spinner"
                    android:layout_width="@dimen/app_settings_interaction_component_width"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </util.components.rotate_layout.RotateLayout>

</ScrollView>